Scafi skeleton