@@ -1,10 +1,15 @@
 import org.jetbrains.kotlin.gradle.tasks.KotlinCompile
+import java.io.ByteArrayOutputStream
+import java.time.LocalDateTime
+import java.time.format.DateTimeFormatter
 
 /*
  * DEFAULT GRADLE BUILD FOR ALCHEMIST SIMULATOR
  */
 
 plugins {
+    java
+    scala
     kotlin("jvm") version "1.3.60"
     application
 }
@@ -30,8 +35,11 @@ sourceSets {
 }
 dependencies {
     // it is highly recommended to replace the '+' symbol with a fixed version
-    implementation("it.unibo.alchemist:alchemist:+")
+    implementation("it.unibo.alchemist:alchemist:9.2.1")
     implementation("org.jetbrains.kotlin:kotlin-stdlib:1.3.60")
+    implementation("it.unibo.alchemist:alchemist-incarnation-scafi:9.2.1")
+    implementation("org.scala-lang:scala-library:2.12.2")
+    implementation("it.unibo.apice.scafiteam:scafi-core_2.12:0.3.2")
     implementation("com.uchuhimo:konf-core:+")
     implementation("com.uchuhimo:konf-yaml:+")
 }
@@ -39,6 +47,11 @@ tasks.withType<KotlinCompile> {
     kotlinOptions {
         jvmTarget = "1.8"
     }
+}
+
+tasks.withType<ScalaCompile> {
+    sourceCompatibility = "1.8"
+    targetCompatibility = "1.8"
 }
 
 val alchemistGroup = "Run Alchemist"
@@ -73,3 +86,67 @@ File(rootProject.rootDir.path + "/src/main/yaml").listFiles()
         runAll.dependsOn(task)
     }
 
+
+fun makeTest(
+        file: String,
+        name: String = file,
+        sampling: Double = 1.0,
+        time: Double = Double.POSITIVE_INFINITY,
+        vars: Set<String> = setOf(),
+        maxHeap: Long? = null,
+        taskSize: Int = 1024,
+        threads: Int? = null,
+        debug: Boolean = false
+) {
+    val heap: Long = maxHeap ?: if (System.getProperty("os.name").toLowerCase().contains("linux")) {
+        ByteArrayOutputStream()
+                .use { output ->
+                    exec {
+                        executable = "bash"
+                        args = listOf("-c", "cat /proc/meminfo | grep MemAvailable | grep -o '[0-9]*'")
+                        standardOutput = output
+                    }
+                    output.toString().trim().toLong() / 1024
+                }
+                .also { println("Detected ${it}MB RAM available.") }  * 9 / 10
+    } else {
+        // Guess 10GB RAM of which 2 used by the OS
+        10 * 1024L
+    }
+
+    val threadCount = threads ?: maxOf(1, minOf(Runtime.getRuntime().availableProcessors(), heap.toInt() / taskSize ))
+    println("Running on $threadCount threads")
+
+    val today = LocalDateTime.now().format(DateTimeFormatter.ofPattern("yyyyMMdd"))
+
+    task<JavaExec>("$name") {
+        classpath = sourceSets["main"].runtimeClasspath
+        classpath("src/main/protelis")
+        main = "it.unibo.alchemist.Alchemist"
+        maxHeapSize = "${heap}m"
+        jvmArgs("-XX:+AggressiveHeap")
+        jvmArgs("-XX:-UseGCOverheadLimit")
+        //jvmArgs("-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap") // https://stackoverflow.com/questions/38967991/why-are-my-gradle-builds-dying-with-exit-code-137
+        if (debug) {
+            jvmArgs("-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=1044")
+        }
+        File("data").mkdirs()
+        args(
+                "-y", "src/main/yaml/${file}.yml",
+                "-t", "$time",
+                "-e", "data/${today}-${name}",
+                "-p", threadCount,
+                "-i", "$sampling"
+        )
+        if (vars.isNotEmpty()) {
+            args("-b", "-var", *vars.toTypedArray())
+        }
+    }
+    /*tasks {
+        "runTests" {
+            dependsOn("$name")
+        }
+    }*/
+}
+
+makeTest(name="sim", file = "service_discovery", time = 100.0, vars = setOf("random"), taskSize = 2800)
